Fix issues with buttons overlapping the dropdowns on the Calendars dialog
I think this was added to fix an issue on the Splatfests dialog but I can't reproduce that issue right now, so just disabling this for now.

--- a/src/web/assets/css/main.scss
+++ b/src/web/assets/css/main.scss
@@ -18,9 +18,10 @@ body.has-modal #main {
     filter: blur(4px);
 }
 
-.dropdown {
-    z-index: 100;
-}
+// Disabling this for now to fix issues on the Calendars dialog
+// .dropdown {
+//     z-index: 100;
+// }
 
 .level.is-mobile .level-item:last-child {
     margin-right: 0;
